# PyTorch-Models

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  train_test_script.ipynb
CNN/: train_test_script.ipynb
CNN/AlexNet/: README.md  train_test_script.ipynb
CNN/AlexNet/model/: alexnet.py
CNN/GoogLeNet/: README.md  train_test_script.ipynb
CNN/GoogLeNet/model/: googlenet.py
CNN/Inception-BN/: train_test_script.ipynb
CNN/InceptionV2/: README.md  train_test_script.ipynb
CNN/InceptionV2/model/: inception_v2.py
CNN/Inception_BN/model/: inception_bn.py
CNN/Inception_V3/: README.md
CNN/Inception_V3/model/: inception_v3.py
CNN/Inception_V3/regularisation/: label_smoothing.py
CNN/LeNet/: README.md  lenet.py  rbf_layer.py  train_test_script.ipynb
CNN/LeNet/modern/: lenet.py
CNN/LeNet/original/: lenet.py  manual_scheduler.py  rbf_layer.py  rescaled_tanh.py  spare_conv_layer.py  subsampling_layer.py
CNN/LeNet/traditional/: lenet.py  manual_scheduler.py  rbf_layer.py  subsampling_layer.py
CNN/ResNet/: README.md  train_test_script.ipynb
CNN/ResNet/model/: resnet.py
CNN/VGG/: README.md  train_test_script.ipynb
CNN/VGG/model/: vgg.py
pytorch_models/CNN/: train_test_script.ipynb
pytorch_models/CNN/alexnet/: README.md  __init__.py
pytorch_models/CNN/googlenet/: README.md  __init__.py
pytorch_models/utils/: augments.py  dataset.py  metrics.py  train_validation.py
typings/torchmetrics/: __init__.pyi
utils/: augments.py  dataset.py  metrics.py  train_validation.py  visualisation.py
(+23 files in other folders)
