[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-models"
version = "0.0.1"
readme = "README.md"
description = "A collection of PyTorch models and utilities for various tasks."
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
    "torchmetrics>=1.7.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
]

[tool.ruff.lint]
extend-select = ["W", "I", "N", "C4", "PT", "RET", "SLF", "SIM", "TC", "RUF200"]
ignore = ["E741"]
isort.force-sort-within-sections = true
